fixed spacing issue with the nav logo on mobile devies

--- a/public/css/header.scss
+++ b/public/css/header.scss
@@ -34,7 +34,7 @@
     @media (max-width: $break-medium) {
       display: block;
       float: none;
-      margin: 5px auto 0px auto;
+      margin: 2px auto 0px auto;
     }
   }
 
